// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SettingsSubsection /> renders with plain text description 1`] = `
<div>
  <div
    class="mx_SettingsSubsection"
  >
    <h3
      class="mx_Heading_h3 mx_SettingsSubsection_heading"
    >
      Test
    </h3>
    <div
      class="mx_SettingsSubsection_description"
    >
      This describes the subsection
    </div>
    <div
      class="mx_SettingsSubsection_content"
    >
      <div>
        test settings content
      </div>
    </div>
  </div>
</div>
`;

exports[`<SettingsSubsection /> renders with react element description 1`] = `
<div>
  <div
    class="mx_SettingsSubsection"
  >
    <h3
      class="mx_Heading_h3 mx_SettingsSubsection_heading"
    >
      Test
    </h3>
    <div
      class="mx_SettingsSubsection_description"
    >
      <p>
        This describes the section 
        <a
          href="/#"
        >
          link
        </a>
      </p>
    </div>
    <div
      class="mx_SettingsSubsection_content"
    >
      <div>
        test settings content
      </div>
    </div>
  </div>
</div>
`;

exports[`<SettingsSubsection /> renders without description 1`] = `
<div>
  <div
    class="mx_SettingsSubsection"
  >
    <h3
      class="mx_Heading_h3 mx_SettingsSubsection_heading"
    >
      Test
    </h3>
    <div
      class="mx_SettingsSubsection_content"
    >
      <div>
        test settings content
      </div>
    </div>
  </div>
</div>
`;
